# effect-erase

./: .env.example  .gitignore  Makefile  README.md  remaining-tasks.md
config/: backend-profiles.example.json
plan/: denoising-sliding-window-plan.md  overlap-chunking-plan.md
scripts/: clean-model-assets.sh  download-model-assets.sh  setup-worker.sh  start-web.sh  start-worker.sh  verify-worker.sh
scripts/lib/: runtime-config.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
web/src/: App.tsx  styles.css
web/src/lib/: api.ts  types.ts
worker/: pyproject.toml
worker/app/: main.py  verify_worker.py
worker/app/api/: public_urls.py  routes.py
worker/app/core/: bootstrap.py  config.py  storage.py
worker/app/models/: runtime.py  video.py
worker/app/runners/: __init__.py  effecterase_remove.py  void_download_assets.py  void_remove.py
worker/app/schemas/: api.py
worker/app/services/: jobs.py  projects.py  sessions.py  void_mask_reasoner.py  void_pipeline.py
worker/tests/: test_download_model_assets_script.py  test_effecterase_remove.py  test_public_urls.py  test_runtime_and_sessions.py  test_runtime_config_script.py  test_settings_paths.py  test_setup_worker_script.py  test_start_worker_script.py  test_verify_worker.py  test_video.py  test_void_mask_reasoner.py  test_worker_dependencies.py
