[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effecterase-worker"
version = "0.1.0"
description = "FastAPI worker for interactive video object removal"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "numpy>=1.26.0,<2.0.0",
  "opencv-python-headless>=4.10.0.84,<4.12.0.0",
  "Pillow>=10.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
